Option to run the last experiment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,19 +4,23 @@ project(LightBulbChallenge)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_library(
-	ColorUtils
-	ColorUtils/ColorUtils.h
-	ColorUtils/ColorUtils.cpp
+add_definitions(
+    -std=c++14
 )
 
-INCLUDE_DIRECTORIES(ColorUtils)
+add_library(
+    ColorUtils
+    ColorUtils/ColorUtils.h
+    ColorUtils/ColorUtils.cpp
+)
+
+include_directories(ColorUtils)
 
 add_executable(
     ColorAnalyser
     ColorAnalyser/main.cpp
-	ColorAnalyser/CommandLineParser.h
-	ColorAnalyser/CommandLineParser.cpp	
+    ColorAnalyser/CommandLineParser.h
+    ColorAnalyser/CommandLineParser.cpp
 )
 
 target_link_libraries(ColorAnalyser ColorUtils)
@@ -24,21 +28,22 @@ target_link_libraries(ColorAnalyser ColorUtils)
 option(Viewer "Build CIE Diagram Viewer" ON)
 
 if(Viewer)
-	SET(CMAKE_INCLUDE_CURRENT_DIR ON)
-	SET(CMAKE_AUTOMOC ON)
+        set(CMAKE_INCLUDE_CURRENT_DIR ON)
+        set(CMAKE_AUTOMOC ON)
 	
 	find_package(Qt5Widgets)
 	find_package(Qt5Charts)
 
 	add_executable(
-		Viewer
-		WIN32
-		Viewer/main.cpp
-		Viewer/CIEWidget.h
-		Viewer/CIEWidget.cpp
-		Viewer/ColorEvolutionWidget.h
-		Viewer/ColorEvolutionWidget.cpp
-        Viewer/Resources.rc
+            Viewer
+            WIN32
+            MACOSX_BUNDLE
+            Viewer/main.cpp
+            Viewer/CIEWidget.h
+            Viewer/CIEWidget.cpp
+            Viewer/ColorEvolutionWidget.h
+            Viewer/ColorEvolutionWidget.cpp
+            Viewer/Resources.rc
 	)
 	
 	target_link_libraries(Viewer Qt5::Widgets Qt5::Charts ColorUtils)
